footer final  edited

--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
             <form class="contact" action="">
                 <input type="text" placeholder="Your Name">
                 <input type="email" placeholder="Your Email">
-                <textarea name="" id="" cols="30" rows="10" placeholder="Message"></textarea>
+                <textarea placeholder="Message" name="" id="" cols="30" rows="10"></textarea>
                 <input class="btn-primary" type="submit">
             </form>
 
